--- a/packages/cursorless-org/package.json
+++ b/packages/cursorless-org/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@cursorless/cheatsheet": "workspace:*",
+    "@cursorless/cursorless-engine": "workspace:*",
     "@cursorless/test-case-component": "workspace:*",
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
