Support custom spoken forms for graphemes

--- a/data/fixtures/recorded/hatTokenMap/sendEmoji.yml
+++ b/data/fixtures/recorded/hatTokenMap/sendEmoji.yml
@@ -7,7 +7,7 @@ command:
     - type: primitive
       mark: {type: decoratedSymbol, symbolColor: default, character: 😄}
   usePrePhraseSnapshot: true
-spokenFormError: Unknown character '😄'
+spokenFormError: grapheme '😄'
 initialState:
   documentContents: |
     😄
