--- a/data/fixtures/recorded/scope/glyph/clearNextGlyphOnyx.yml
+++ b/data/fixtures/recorded/scope/glyph/clearNextGlyphOnyx.yml
@@ -13,7 +13,7 @@ command:
           length: 1
           direction: forward
   usePrePhraseSnapshot: true
-spokenFormError: Unknown character 'å'
+spokenFormError: grapheme 'å'
 initialState:
   documentContents: abå
   selections:
