--- a/packages/cursorless-talon-js/package.json
+++ b/packages/cursorless-talon-js/package.json
@@ -7,12 +7,15 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "esbuild:base": "esbuild ./src/extension.ts --conditions=cursorless:bundler --bundle --outfile=out/talon.js --external:talon --format=cjs --platform=neutral",
+    "esbuild:base": "tsx esbuild.ts",
     "esbuild": "pnpm run esbuild:base --sourcemap",
     "esbuild:meta": "pnpm run esbuild:base --metafile=meta.json",
     "esbuild:watch": "pnpm run esbuild:base --sourcemap --watch",
     "esbuild:prod": "pnpm run esbuild:base --minify",
-    "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
+    "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build",
+    "depcruise": "depcruise --no-config --exclude '^node_modules' src/extension.ts > dependencies.json",
+    "depcruise_dot": "depcruise --no-config --exclude '^node_modules' --output-type dot src/extension.ts > dependencies.dot",
+    "ts_dependency_graph": "ts_dependency_graph -v --start src/extension.ts > dependencies.txt"
   },
   "dependencies": {
     "@cursorless/common": "workspace:*",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@types/lodash-es": "4.17.0",
-    "esbuild": "^0.20.2"
+    "dependency-cruiser": "^16.3.6",
+    "ts_dependency_graph": "^2.1.1"
   }
 }
