--- a/packages/cursorless-talon-js/package.json
+++ b/packages/cursorless-talon-js/package.json
@@ -15,7 +15,8 @@
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build",
     "depcruise": "depcruise --no-config --exclude '^node_modules' src/extension.ts > dependencies.json",
     "depcruise_dot": "depcruise --no-config --exclude '^node_modules' --output-type dot src/extension.ts > dependencies.dot",
-    "ts_dependency_graph": "ts_dependency_graph -v --start src/extension.ts > dependencies.txt"
+    "ts_dependency_graph": "ts_dependency_graph -v --start src/extension.ts > dependencies.txt",
+    "madge": "madge src/extension.ts > madge.txt"
   },
   "dependencies": {
     "@cursorless/common": "workspace:*",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/lodash-es": "4.17.0",
     "dependency-cruiser": "^16.3.6",
-    "ts_dependency_graph": "^2.1.1"
+    "ts_dependency_graph": "^2.1.1",
+    "madge": "^7.0.0"
   }
 }
