Rename package to node common

--- a/packages/cursorless-vscode/tsconfig.json
+++ b/packages/cursorless-vscode/tsconfig.json
@@ -17,7 +17,7 @@
       "path": "../cursorless-engine"
     },
     {
-      "path": "../file-system-common"
+      "path": "../node-common"
     },
     {
       "path": "../vscode-common"
