--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,10 +30,10 @@
       "path": "./packages/cursorless-vscode-e2e"
     },
     {
-      "path": "./packages/file-system-common"
+      "path": "./packages/meta-updater"
     },
     {
-      "path": "./packages/meta-updater"
+      "path": "./packages/node-common"
     },
     {
       "path": "./packages/test-harness"
