--- a/packages/cursorless-vscode/package.json
+++ b/packages/cursorless-vscode/package.json
@@ -1242,7 +1242,7 @@
     "@cursorless/common": "workspace:*",
     "@cursorless/cursorless-cheatsheet": "workspace:*",
     "@cursorless/cursorless-engine": "workspace:*",
-    "@cursorless/file-system-common": "workspace:*",
+    "@cursorless/node-common": "workspace:*",
     "@cursorless/vscode-common": "workspace:*",
     "immer": "^10.0.4",
     "itertools": "^2.2.5",
