--- a/packages/cursorless-cheatsheet/package.json
+++ b/packages/cursorless-cheatsheet/package.json
@@ -28,8 +28,7 @@
     "@cursorless/node-common": "workspace:*",
     "immer": "^10.0.4",
     "lodash-es": "^4.17.21",
-    "node-html-parser": "^6.1.12",
-    "pathe": "^1.1.2"
+    "node-html-parser": "^6.1.12"
   },
   "devDependencies": {
     "@types/lodash-es": "4.17.0"
