--- a/packages/cursorless-talon-js/tsconfig.json
+++ b/packages/cursorless-talon-js/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES6",
-    "lib": ["ES6"],
+    "target": "es2020",
     "rootDir": "src",
     "outDir": "out",
+    "noEmit": true,
+    "emitDeclarationOnly": false,
     "typeRoots": ["src/types", "node_modules/@types"]
   },
   "references": [
