--- a/packages/cursorless-talon-js/tsconfig.json
+++ b/packages/cursorless-talon-js/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "es2020",
+    "target": "ES2022",
     "rootDir": "src",
     "outDir": "out",
     "noEmit": true,
