fix: also use workspace init.lua for running tests locally

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -223,7 +223,7 @@
       "windows": {
         "command": "powershell",
         "args": [
-          "(New-Object -ComObject WScript.Shell).Run(\"\"\"nvim\"\"\", 1, $false)"
+          "(New-Object -ComObject WScript.Shell).Run(\"\"\"${workspaceFolder}/packages/cursorless-neovim/scripts/debug-neovim.bat\"\"\", 1, $false)"
         ]
       },
       "osx": {
