--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ node_modules
 *.vsix
 /package-lock.json
 *.DS_Store
+meta.json
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
