--- a/packages/cursorless-neovim/tsconfig.json
+++ b/packages/cursorless-neovim/tsconfig.json
@@ -16,6 +16,12 @@
     },
     {
       "path": "../neovim-registry"
+    },
+    {
+      "path": "../node-common"
+    },
+    {
+      "path": "../test-case-recorder"
     }
   ],
   "include": ["src/**/*.ts", "src/**/*.json", "../../typings/**/*.d.ts"]
