--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           version: ${{ matrix.app_version }}
           neovim: true
-      - name: Run neovim unit tests using test-harness
+      - name: Run neovim tests
         run: xvfb-run -a pnpm -F @cursorless/test-harness testNeovim
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
         env:
