--- a/packages/cursorless-everywhere-talon/package.json
+++ b/packages/cursorless-everywhere-talon/package.json
@@ -13,6 +13,7 @@
     "esbuild:meta": "pnpm run esbuild:base --metafile=meta.json src/mainDevelopment.ts",
     "esbuild:base": "bash scripts/esbuild.sh",
     "build": "pnpm run clean && pnpm run esbuild:prod && pnpm run populate-dist",
+    "compile": "tsc --build",
     "populate-dist": "bash scripts/populate-dist.sh",
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
