--- a/packages/neovim-common/tsconfig.json
+++ b/packages/neovim-common/tsconfig.json
@@ -10,6 +10,9 @@
     },
     {
       "path": "../neovim-registry"
+    },
+    {
+      "path": "../node-common"
     }
   ],
   "include": ["src/**/*.ts", "src/**/*.json", "../../typings/**/*.d.ts"]
