--- a/packages/cursorless-everywhere-talon/package.json
+++ b/packages/cursorless-everywhere-talon/package.json
@@ -9,9 +9,11 @@
   "scripts": {
     "esbuild:dev": "pnpm run esbuild:base src/mainDevelopment.ts",
     "esbuild:prod": "pnpm run esbuild:base --minify src/mainProduction.ts",
+    "esbuild:test": "pnpm run esbuild:base --minify src/mainTest.ts",
     "esbuild:watch": "pnpm run esbuild:base --watch src/mainDevelopment.ts",
     "esbuild:meta": "pnpm run esbuild:base --metafile=meta.json src/mainDevelopment.ts",
     "esbuild:base": "bash scripts/esbuild.sh",
+    "test:quickjs": "bash scripts/test-quickjs.sh",
     "build": "pnpm run clean && pnpm run esbuild:prod && pnpm run populate-dist",
     "compile": "tsc --build",
     "populate-dist": "bash scripts/populate-dist.sh",
