--- a/packages/cursorless-everywhere-talon/tsconfig.json
+++ b/packages/cursorless-everywhere-talon/tsconfig.json
@@ -16,5 +16,6 @@
       "path": "../cursorless-engine"
     }
   ],
-  "include": ["src/**/*.ts", "src/**/*.json", "../../typings/**/*.d.ts"]
+  "include": ["src/**/*.ts", "src/**/*.json", "../../typings/**/*.d.ts"],
+  "exclude": ["src/test"]
 }
