--- a/packages/cursorless-org/tsconfig.json
+++ b/packages/cursorless-org/tsconfig.json
@@ -11,9 +11,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true,
-    "rootDir": "src",
-    "outDir": "out"
+    "incremental": true
   },
   "include": [
     "src/**/*.ts",
