--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     "editor.defaultFormatter": "AndreasArvidsson.andreas-talon"
   },
   "[talon]": {
-    "editor.defaultFormatter": "wenkokke.tree-sitter-talon"
+    "editor.defaultFormatter": "wenkokke.talonfmt-vscode"
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
