--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,30 +3,12 @@
 {
   "version": "2.0.0",
   "tasks": [
+    // Generic build tasks
     {
-      "label": "Build",
-      "dependsOn": [
-        "Populate dist",
-        "ESBuild",
-        "TSBuild",
-        "Build test harness"
-      ],
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      }
-    },
-    {
-      "label": "Build extension only",
-      "dependsOn": ["Populate dist", "ESBuild"],
-      "group": "build"
-    },
-    {
-      "label": "ESBuild",
+      "label": "TSBuild",
       "type": "npm",
-      "script": "esbuild",
-      "path": "packages/cursorless-vscode",
-      "dependsOn": ["Generate grammar"],
+      "script": "compile",
+      "problemMatcher": "$tsc",
       "presentation": {
         "reveal": "silent"
       },
@@ -43,26 +25,6 @@
       "group": "build"
     },
     {
-      "label": "TSBuild",
-      "type": "npm",
-      "script": "compile",
-      "problemMatcher": "$tsc",
-      "presentation": {
-        "reveal": "silent"
-      },
-      "group": "build"
-    },
-    {
-      "label": "Populate dist",
-      "type": "npm",
-      "script": "populate-dist",
-      "path": "packages/cursorless-vscode",
-      "presentation": {
-        "reveal": "silent"
-      },
-      "group": "build"
-    },
-    {
       "label": "Generate grammar",
       "type": "npm",
       "script": "generate-grammar",
@@ -71,33 +33,8 @@
       },
       "group": "build"
     },
-    {
-      "label": "Ensure test subset file exists",
-      "type": "npm",
-      "script": "generate-test-subset-file-strict",
-      "path": "packages/test-harness",
-      "presentation": {
-        "reveal": "silent"
-      },
-      "group": "test"
-    },
-    {
-      "label": "Generate test subset file",
-      "type": "npm",
-      "script": "generate-test-subset-file",
-      "path": "packages/test-harness",
-      "presentation": {
-        "reveal": "silent"
-      },
-      "group": "none",
-      "problemMatcher": []
-    },
-    {
-      "label": "Prepare test subset",
-      "dependsOn": ["Ensure test subset file exists", "Build"],
-      "dependsOrder": "sequence",
-      "group": "test"
-    },
+
+    // Generic watch tasks
     {
       "label": "watch",
       "dependsOn": ["Watch esbuild", "Watch typescript"],
@@ -124,6 +61,76 @@
       },
       "group": "build"
     },
+
+    // Generic test tasks
+    {
+      "label": "Ensure test subset file exists",
+      "type": "npm",
+      "script": "generate-test-subset-file-strict",
+      "path": "packages/test-harness",
+      "presentation": {
+        "reveal": "silent"
+      },
+      "group": "test"
+    },
+    {
+      "label": "Generate test subset file",
+      "type": "npm",
+      "script": "generate-test-subset-file",
+      "path": "packages/test-harness",
+      "presentation": {
+        "reveal": "silent"
+      },
+      "group": "none",
+      "problemMatcher": []
+    },
+
+    // VSCode tasks
+    {
+      "label": "VSCode: Build extension",
+      "dependsOn": ["VSCode: Populate dist", "VSCode: ESBuild"],
+      "group": "build"
+    },
+    {
+      "label": "VSCode: Build extension and tests",
+      "dependsOn": ["VSCode: Build extension", "TSBuild", "Build test harness"],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    },
+    {
+      "label": "VSCode: ESBuild",
+      "type": "npm",
+      "script": "esbuild",
+      "path": "packages/cursorless-vscode",
+      "dependsOn": ["Generate grammar"],
+      "presentation": {
+        "reveal": "silent"
+      },
+      "group": "build"
+    },
+    {
+      "label": "VSCode: Populate dist",
+      "type": "npm",
+      "script": "populate-dist",
+      "path": "packages/cursorless-vscode",
+      "presentation": {
+        "reveal": "silent"
+      },
+      "group": "build"
+    },
+    {
+      "label": "VSCode: Prepare test subset",
+      "dependsOn": [
+        "Ensure test subset file exists",
+        "VSCode: Build extension and tests"
+      ],
+      "dependsOrder": "sequence",
+      "group": "test"
+    },
+
+    // cursorless.org
     {
       "label": "Serve cursorless.org",
       "type": "shell",
