--- a/packages/cursorless-org-docs/tsconfig.json
+++ b/packages/cursorless-org-docs/tsconfig.json
@@ -10,7 +10,12 @@
     "emitDeclarationOnly": false,
     "jsx": "react"
   },
-  "include": ["src/**/*.ts", "src/**/*.json", "../../typings/**/*.d.ts"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.json",
+    "src/**/*.tsx",
+    "../../typings/**/*.d.ts"
+  ],
   "exclude": ["node_modules"],
   "references": [
     {
