--- a/packages/cursorless-org-docs/package.json
+++ b/packages/cursorless-org-docs/package.json
@@ -51,7 +51,7 @@
     "@docusaurus/types": "3.1.1",
     "@tsconfig/docusaurus": "2.0.2",
     "@types/mdast": "4.0.3",
-    "@types/react": "^18.0.0",
+    "@types/react": "18.2.71",
     "typescript": "^5.5.3",
     "unified": "11.0.4"
   },
