--- a/packages/cursorless-vscode/tsconfig.json
+++ b/packages/cursorless-vscode/tsconfig.json
@@ -15,6 +15,9 @@
       "path": "../cursorless-engine"
     },
     {
+      "path": "../cursorless-tutorial"
+    },
+    {
       "path": "../node-common"
     },
     {
