--- a/packages/cursorless-everywhere-talon/package.json
+++ b/packages/cursorless-everywhere-talon/package.json
@@ -13,7 +13,8 @@
     "esbuild:watch": "pnpm run esbuild:base --watch src/mainDevelopment.ts",
     "esbuild:meta": "pnpm run esbuild:base --metafile=meta.json src/mainDevelopment.ts",
     "esbuild:base": "bash scripts/esbuild.sh",
-    "test:quickjs": "bash scripts/test-quickjs.sh",
+    "test": "pnpm run test:quickjs",
+    "test:quickjs": "pnpm run esbuild:test && bash scripts/test-quickjs.sh",
     "build": "pnpm run clean && pnpm run esbuild:prod && pnpm run populate-dist",
     "compile": "tsc --build",
     "populate-dist": "bash scripts/populate-dist.sh",
