--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,9 @@ jobs:
         if: runner.os == 'Linux'
       - run: pnpm --color test
         if: runner.os != 'Linux'
+      - name: Run Cursorless everywhere talon quickjs tests
+        run: xvfb-run -a pnpm -F @cursorless/cursorless-everywhere-talon test:quickjs
+        if: runner.os == 'Linux' && matrix.app_version == 'stable'
       - name: Create vscode dist that can be installed locally
         run: pnpm -F @cursorless/cursorless-vscode populate-dist --local-install
         if: runner.os == 'Linux' && matrix.vscode_version == 'stable'
