--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,7 @@ jobs:
         if: runner.os != 'Linux'
       - name: Run Cursorless everywhere talon quickjs tests
         run: xvfb-run -a pnpm -F @cursorless/cursorless-everywhere-talon test:quickjs
-        if: runner.os == 'Linux' && matrix.app_version == 'stable'
+        if: runner.os == 'Linux'
       - name: Create vscode dist that can be installed locally
         run: pnpm -F @cursorless/cursorless-vscode populate-dist --local-install
         if: runner.os == 'Linux' && matrix.vscode_version == 'stable'
