--- a/packages/cursorless-everywhere-talon-e2e/tsconfig.json
+++ b/packages/cursorless-everywhere-talon-e2e/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "target": "ES2022"
+  },
   "include": ["src/**/*.ts", "src/**/*.json", "../../typings/**/*.d.ts"],
+  "exclude": ["src/quickjsTest.ts"],
   "references": [
     {
       "path": "../common"
