--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,27 +55,19 @@ jobs:
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
         env:
           NEOVIM_PATH: ${{ steps.vim.outputs.executable }}
-      - name: Set up Lua
-        uses: leafo/gh-actions-lua@v9
+      - uses: leafo/gh-actions-lua@v9
         with:
           luaVersion: "luajit-2.1.0-beta3"
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
-      - name: Set up Luarocks
-        uses: leafo/gh-actions-luarocks@v4
+      - uses: leafo/gh-actions-luarocks@v4
         with:
           luaVersion: "5.1"
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
-      - name: Install Busted
-        run: |
-          luarocks install busted
-          luarocks install luafilesystem
+      - run: luarocks install busted luafilesystem
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
       - name: Run cursorless.nvim busted lua tests
-        run: |
-          cd cursorless.nvim
-          busted --run unit
+        run: cd cursorless.nvim && busted --run unit
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
-        id: neovimLuaTests
       - name: Create vscode dist that can be installed locally
         run: pnpm -F @cursorless/cursorless-vscode populate-dist --local-install
         if: runner.os == 'Linux' && matrix.app_version == 'stable'
