--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -268,6 +268,14 @@
         "command": "echo"
       }
     },
+    {
+      "label": "Neovim: Run cursorless.nvim lua tests",
+      "type": "shell",
+      "command": "busted --run unit",
+      "options": {
+        "cwd": "cursorless.nvim"
+      }
+    },
 
     // cursorless.org
     {
