--- a/packages/cursorless-everywhere-talon-e2e/package.json
+++ b/packages/cursorless-everywhere-talon-e2e/package.json
@@ -15,8 +15,9 @@
   "type": "module",
   "dependencies": {
     "@cursorless/common": "workspace:*",
+    "@cursorless/cursorless-everywhere-talon-core": "workspace:*",
     "@cursorless/node-common": "workspace:*",
-    "@cursorless/cursorless-everywhere-talon-core": "workspace:*"
+    "@cursorless/test-case-recorder": "workspace:*"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.6",
