Filter on actions

--- a/packages/cursorless-everywhere-talon-e2e/tsconfig.json
+++ b/packages/cursorless-everywhere-talon-e2e/tsconfig.json
@@ -10,6 +10,9 @@
       "path": "../common"
     },
     {
+      "path": "../cursorless-engine"
+    },
+    {
       "path": "../cursorless-everywhere-talon-core"
     },
     {
